# src/entity/user.entity.ts
@@ -1,18 +1,19 @@
 
-import { SimpleProductModel } from "src/model/simple_product.model";
+import { SimpleProductDto } from "src/dto/simple_product.dto";
 import { OrderEntity } from "./order.entity";
 import { QABoardMetaEntity } from "./qaboard_meta.entity";
 
 export interface UserEntity {
     readonly id: number
     readonly email: string
+    readonly username: string
     readonly password: string
     readonly address: string
     readonly salt: string
     readonly orders: OrderEntity[]
     readonly coupons: string[]
     readonly qaboards: QABoardMetaEntity[]
-    readonly basket: SimpleProductModel[] // 상품 아이디 배열
+    readonly basket: SimpleProductDto[] // 상품 아이디 배열
     readonly createdAt: Date
     readonly isAdmin: boolean
 }
